# manifoldguard

./: .gitignore  LICENSE  README.md  pyproject.toml
datasets/lm_eval_real/: data_note.md  data_note_expanded.md  scores.csv  scores_expanded.csv
examples/: demo_request.json
manifoldguard/: __init__.py  _utils.py  conformal.py  data.py  ensemble.py  episodes.py  evaluation.py  inference.py  leaderboard_dataset.py  lm_eval.py  mf.py  ood.py  splits.py
results/ablations/: ablation_table.csv
results/alpha_validation/: results_by_seed.csv  summary_table.csv
results/baseline_comparison/: results_by_seed.csv  summary_table.csv  visualize_results.ipynb
results/cost_savings/: results_by_seed.csv  summary_table.csv
results/demo/: demo_report.json  latent_vectors.csv
results/exports/: example_metrics.csv  example_metrics.json
results/family_split/: family_counts.csv  results_by_seed.csv  summary_table.csv
results/manifold_visualization/: projection.csv
scripts/: build_dataset.py  build_expanded_dataset.py  generate_conference_figures.py  generate_plots.py  generate_raw_charts.py  plot_calibration.py  run_ablations.py  run_alpha_coverage_validation.py  run_baseline_comparison.py  run_cost_savings_analysis.py  run_demo.py  run_experiments.py  run_family_split_benchmark.py  run_manifold_visualization.py  run_real_data_benchmarks.py  run_real_data_benchmarks.sh
tests/: test_conformal.py  test_data.py  test_episodes.py  test_evaluation.py  test_inference.py  test_leaderboard_dataset.py  test_lm_eval.py  test_mf.py  test_ood.py  test_splits.py
(+6 files in other folders)
